HelloUltraviolet/Fixtures/RejectedSource/Expressions/RaceTooFewArms/Source/Main.uv
//! Rejected async composition specimen for a race with too few arms.

public procedure unitAsyncValue() -> Async<(), (), i32, !> {
    return 1
}

public procedure raceTooFewArmsReference() -> i32 {
    let value: i32 = race {
        unitAsyncValue() -> |result| result,
    }
    return value
}
